--- a/index.html
+++ b/index.html
@@ -89,6 +89,12 @@
             <i class="fab fa-instagram"></i>
           </a>
         </div>
+        <div></div>
+
+        <div style="margin-top: 50px" class="LI-profile-badge" data-version="v1" data-size="medium" data-locale="en_US"
+          data-type="horizontal" data-theme="light" data-vanity="iamhamid-mehmood"><a class="LI-simple-link"
+            href='https://uk.linkedin.com/in/iamhamid-mehmood?trk=profile-badge'>Hamid Mehmood</a></div>
+
       </div>
     </section>
 
@@ -317,6 +323,9 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/resume.min.js"></script>
+
+  <!-- Custom scripts for linkedin Badge -->
+  <script type="text/javascript" src="https://platform.linkedin.com/badges/js/profile.js" async defer></script>
 
 </body>
 
