--- a/index.html
+++ b/index.html
@@ -119,7 +119,8 @@
                 <li>Coordination with the client to ensure successful delivery of the Project.</li>
                 <li>Continuous integration of code.</li>
                 <li>Ensuring the security of the code and services implementing.</li>
-                <li>Using different technologies like MVVM, RxJava, Dagger2, Retrofit, Room, Realm, Glide, Picasso,
+                <li>Using different technologies like Clean Architecture, MVVM, RxJava, Dagger2, Retrofit, Room, Realm,
+                  Glide, Picasso,
                   Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK, Android Things, AWS-IoT, Ethereum
                   blockchain, Smart Contracts.</li>
                 <li>Parallel development with different team members working on the same project.</li>
