--- a/index.html
+++ b/index.html
@@ -103,6 +103,35 @@
     <section class="resume-section p-3 p-lg-5 d-flex justify-content-center" id="experience">
       <div class="w-100">
         <h2 class="mb-5">Experience</h2>
+        
+        <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
+          <div class="resume-content">
+            <h3 class="mb-0">Mobile Engineer - Android</h3>
+            <div class="subheading mb-3">Curve</div>
+            <div class="subheading mb-4">
+              <a href="https://www.curve.com/en-gb/">Curve</a>
+            </div>
+            <p>
+              <ul>
+                <li>Task Breakdown and Estimation.</li>
+                <li>Doing SPIKE and integrating Libraries.</li>
+                <li>Code Optimization and Synchronization.</li>
+                <li>Developing Modules and SDK’s to maintain code re-usability and scallability.</li>
+                <li>Coordination with the team to ensure successful delivery of the Project.</li>
+                <li>Continuous integration of code.</li>
+                <li>Ensuring the security of the code and services implementing.</li>
+                <li>Using different technologies like Clean Architecture, MVVM, RxJava, Coroutines, Dagger2, Koin, Retrofit, Room, Realm,
+                  Glide, Picasso,
+                  Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK.</li>
+                <li>Parallel development with different team members working on the same project.</li>
+                <li>Developing Application on Android using Java and Kotlin.</li>
+              </ul>
+            </p>
+          </div>
+          <div class="resume-date text-md-right">
+            <span class="text-primary">November 2017 - Present</span>
+          </div>
+        </div>
 
         <div class="resume-item d-flex flex-column flex-md-row justify-content-between mb-5">
           <div class="resume-content">
