--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2017 - Present</span>
+            <span class="text-primary">Febuary 2020 - Present</span>
           </div>
         </div>
 
@@ -159,7 +159,7 @@
             </p>
           </div>
           <div class="resume-date text-md-right">
-            <span class="text-primary">November 2017 - Present</span>
+            <span class="text-primary">November 2017 - January 2020</span>
           </div>
         </div>
 
