--- a/index.html
+++ b/index.html
@@ -278,6 +278,12 @@
           <li class="list-inline-item">
             <i class="fab fa-aws"></i>
           </li>
+          <li class="list-inline-item">
+            <i class="fab fa-figma"></i>
+          </li>
+          <li class="list-inline-item">
+            <i class="fab fa-slack"></i>
+          </li>
         </ul>
 
         <div class="subheading mb-3">Workflow</div>
