--- a/index.html
+++ b/index.html
@@ -116,15 +116,17 @@
                 <li>Task Breakdown and Estimation.</li>
                 <li>Doing SPIKE and integrating Libraries.</li>
                 <li>Code Optimization and Synchronization.</li>
-                <li>Developing Modules and SDK’s to maintain code re-usability and scallability.</li>
+                <li>Developing Modules and SDK’s to maintain code re-usability and scalability.</li>
                 <li>Coordination with the team to ensure successful delivery of the Project.</li>
-                <li>Continuous integration of code.</li>
+                <li>Code Review and Continuous integration of code.</li>
                 <li>Ensuring the security of the code and services implementing.</li>
-                <li>Using different technologies like Clean Architecture, MVVM, RxJava, Coroutines, Dagger2, Koin, Retrofit, Room, Realm,
+                <li>Using different technologies like Clean Architecture, MVVM, RxJava2, Coroutines, Dagger2, Koin, Retrofit, Room, Realm,
                   Glide, Picasso,
-                  Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK.</li>
+                  Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK, GraphQL and Apollo.</li>
                 <li>Parallel development with different team members working on the same project.</li>
-                <li>Developing Application on Android using Java and Kotlin.</li>
+                <li>Developing Application on Android using Kotlin and Java.</li>
+                <li>Converting Java Code into Kotlin.</li>
+                <li>Participation in Android & Engineering Huddles.</li>
               </ul>
             </p>
           </div>
