--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
           <a href="mailto:hamidqureshi.hq000@gmail.com">hamidqureshi.hq000@gmail.com</a>
         </div>
         <p class="lead mb-5">
-          Android Developer offering over three years’ experience developing, designing, implementing,
+          Android Developer offering over four years’ experience developing, designing, implementing,
           integrating, testing and supporting impactful applications and libraries developed in diverse,
           collaborative environments for mobile and tablet devices on the Android platform.</p>
 
