--- a/index.html
+++ b/index.html
@@ -308,6 +308,12 @@
           <li>
             <i class="fa-li fa fa-check"></i>
             Dagger2, View Model, RxJava/RxAndroid, Junit, Mockito, Espresso, DataBinding, LiveData</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            Koin, Coroutines, AndroidFlow</li>
+          <li>
+            <i class="fa-li fa fa-check"></i>
+            GraphQL, Apollo GraphQL</li>
         </ul>
       </div>
     </section>
