--- a/index.html
+++ b/index.html
@@ -71,9 +71,9 @@
           <a href="mailto:hamidqureshi.hq000@gmail.com">hamidqureshi.hq000@gmail.com</a>
         </div>
         <p class="lead mb-5">
-          Android Developer offering over four years’ experience developing, designing, implementing,
-          integrating, testing and supporting impactful applications and libraries developed in diverse,
-          collaborative environments for mobile and tablet devices on the Android platform.</p>
+          Experienced Software Developer adept in bringing forth expertise in design, develop, testing and maintenance of Android Applications.  
+          Experienced with the latest cutting edge development tools and procedures.   
+          Able to effectively self-manage during independent projects, as well as collaborate as part of a productive team.</p>
 
         <div class="social-icons">
           <a href="https://www.linkedin.com/in/iamhamid-mehmood/">
@@ -113,20 +113,21 @@
             </div>
             <p>
               <ul>
-                <li>Task Breakdown and Estimation.</li>
-                <li>Doing SPIKE and integrating Libraries.</li>
-                <li>Code Optimization and Synchronization.</li>
-                <li>Developing Modules and SDK’s to maintain code re-usability and scalability.</li>
-                <li>Coordination with the team to ensure successful delivery of the Project.</li>
-                <li>Code Review and Continuous integration of code.</li>
-                <li>Ensuring the security of the code and services implementing.</li>
-                <li>Using different technologies like Clean Architecture, MVVM, RxJava2, Coroutines, Dagger2, Koin, Retrofit, Room, Realm,
-                  Glide, Picasso,
-                  Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK, GraphQL and Apollo.</li>
-                <li>Parallel development with different team members working on the same project.</li>
-                <li>Developing Application on Android using Kotlin and Java.</li>
-                <li>Converting Java Code into Kotlin.</li>
-                <li>Participation in Android & Engineering Huddles.</li>
+                <li>Task Breakdown, Creation, and Estimation of tickets.</li>
+                <li>Worked on User On-boarding Funnel to reduce friction and improve funnel Performance.</li>
+                <li>Implementing User Identity veriﬁcation (KYC) by integrating Doc and Selﬁe.</li>
+                <li>Spiking and Adding Third-party libraries to ship features like Loyalty.</li>
+                <li>Integrating Deep links and External SDK like BranchIO to deep-link to speciﬁc screens inside the app.</li>
+                <li>Worked on the Growth side of the business and integrated Braze for customizing user journey and personalized communication in form of Emails/Notiﬁcations and In-App Messaging.</li>
+                <li>Worked on Integrating Feature Flagging libraries (Launch Darkly and Firebase Remote Conﬁg) to do A/B testing and turn on/oƦ features without app release.</li>
+                <li>Doing A/B testing and evaluating results.</li>
+                <li>Releasing Mobile applications for Production on Play Store and QA builds on Firebase for internal testing.</li>
+                <li>Worked on Google Pay Push Provisioning.</li>
+                <li>Developing and maintaining multi-modular app structure and architecture to maintain code reusability and scalability.</li>
+                <li>Unit and UI testing. Increasing test coverage.</li>
+                <li>Contributing to Android and Mobile Huddles, MR reviews, and Interviewing New Candidates.</li>
+                <li>Using diƦerent technologies like Clean Architecture, MVVM/MVI, Coroutines, Koin, Retroﬁt, Room, Picasso, Databinding, LiveData, Junit, Mockito, Espresso, Firebase SDK and GraphQL.</li>
+
               </ul>
             </p>
           </div>
